# bindolo

./: .gitignore  README.md  app.py  bindolo.ini  pyproject.toml  run.sh
bindolo_notepad/: __init__.py  cli.py  game.py  state.py
bindolo_notepad/static/: style.css
bindolo_notepad/templates/game/: landing.html  reading.html
bnotepad/: __init__.py  game.py  state.py
bnotepad/templates/: admin.html  index.html  landing.html  reading.html
bnotepad/templates/game/: landing.html  play.html  reading.html
static/: style.css
templates/: admin.html  index.html  landing.html  play.html  reading.html
