[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bindolo-notepad"
version = "0.1.0"
description = "Un progettino per evitare ai miei amici la mia pessima grafia"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = { text = "MIT" }

dependencies = [
  "Flask>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff",
  "isort",
  "python-dotenv",
]

[tool.ruff]
indent-width = 2
[tool.ruff.format]
indent-style = "space"

