[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bindolo-notepad"
version = "0.1.1"
description = "Un progettino per evitare ai miei amici la mia pessima grafia"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = { text = "MIT" }

dependencies = [
  "Flask==3.1.2",
]

[project.scripts]
bindolo = "bindolo_notepad.cli:run"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff",
  "isort",
  "python-dotenv",
]

[tool.ruff]
indent-width = 2
[tool.ruff.format]
indent-style = "space"

